--- a/UniverzalnaWebTrgovina/UWT.Web/Views/Shared/_ShopsLayout.cshtml
+++ b/UniverzalnaWebTrgovina/UWT.Web/Views/Shared/_ShopsLayout.cshtml
@@ -32,6 +32,7 @@
         </div>
     </div>
 
-    @RenderSection("scripts", required: false)
+        @RenderSection("scripts", required: false)
+        <script src="~/Scripts/Basket.js"></script>
 </body>
 </html>
