--- a/UniverzalnaWebTrgovina/UWT.Web/Views/Shared/PageLayouts/DefaultLayout.cshtml
+++ b/UniverzalnaWebTrgovina/UWT.Web/Views/Shared/PageLayouts/DefaultLayout.cshtml
@@ -1,6 +1,5 @@
 ﻿@RenderSection("pageBegin", false)
 
-<body>
 <nav class="navbar navbar-fixed-top" role="navigation">
     @Html.Partial("_Navbar")
 </nav>
@@ -23,6 +22,9 @@
     </div>
 </nav>
 <div class="container sheet">
+    <div class="col-md-12">
+        @RenderSection("basketContent", false)
+    </div>
     <div class="col-md-4">
         @RenderSection("categories", false)
     </div>
@@ -42,6 +44,5 @@
     @RenderSection("contact", false)
 </div>
 
-@RenderSection("scripts", required: false)
-</body>
+@RenderSection("scripts", false)
 @RenderSection("pageEnd", false)
