--- a/UniverzalnaWebTrgovina/UWT.Web/Views/Basket/Index.cshtml
+++ b/UniverzalnaWebTrgovina/UWT.Web/Views/Basket/Index.cshtml
@@ -30,8 +30,8 @@
         background-color: @style.NavColor;
     }
     .categoryList-image {
-        max-height: 100%;
-        max-width: 100%;
+        max-height: 30px;
+        max-width: 40px;
     }
     .img-logo {
         height: 100%;
@@ -85,7 +85,7 @@
         <link href="~/Content/startbootstrap.css" rel="stylesheet" />
         <script src="~/Scripts/Controllers/UwtControllers.js"></script>
         <script>
-            var basketController = new BasketController(@Html.Raw(JsonConvert.SerializeObject(Model)), "@ViewBag.ShopId", "@Url.Action("AddToBasket", "Basket")", "@Url.Action("RemoveFromBasket", "Basket")", "@Url.Action("UpdateBasketAmount", "Basket")");
+            var basketController = new BasketController(@Html.Raw(JsonConvert.SerializeObject(Model)), "@ViewBag.ShopId", "@Url.Action("AddToBasket")", "@Url.Action("RemoveFromBasket")", "@Url.Action("UpdateBasketAmount")", "@Url.Action("BuyBasket")", "@Url.Action("Invoice", "Invoice")");
         </script>
     </head>
     <body ng-controller="BasketController">
@@ -110,34 +110,59 @@
     <div class="footerimage"></div>
 }
 @section basketContent {
-<div class="row">
-    <div ng-repeat="item in basket.BasketItems" class="col-md-12">
-        <div style="width: 100%; height: 64px">
-            <div style="width: 64px; float: left; margin-right: 16px;">
-                <img class="categoryList-image" src="{{item.Product.Image}}" alt=""/>
-            </div>
-            <h3 style="font-size: 20px; padding: 20px" class="pull-left" ng-bind="{{item.Product.Title}}"></h3>
-            <h3 style="font-size: 20px; padding: 20px" class="pull-left">
-                <span ng-bind="{{item.Product.UnitPrice}}"></span>
-                <span>kn</span>
-            </h3>
-            <h3 style="font-size: 20px; padding: 20px" class="pull-left">
-                <span>Količina (kom):</span>
-            </h3>
-            <div class="pull-left col-md-3" style="padding: 20px">
-                <input type="number" class="form-control" ng-model="item.Amount" ng-change="item.onAmountChanged()" max="{{item.Product.Count}}" min="1"/>
-            </div>
-            <h3 style="font-size: 20px; padding: 20px" class="pull-right">
-                <span ng-bind="item.Product.UnitPrice * item.Amount"></span>
-                <span>kn</span>
-            </h3>
-        </div>
-    </div>
-</div>
-<hr/>
-<div class="row">
-
-</div>
+<h3>Moja košarica</h3>
+    <table class="table table-responsive table-condensed">
+        <thead>
+            <tr>
+                <th colspan="2" class="col-md-4">
+                    Proizvod
+                </th>
+                <th class="col-md-2 text-center">Jedinična cijena</th>
+                <th class="col-md-2">Količina (kom.)</th>
+                <th class="col-md-2 text-right">Ukupna cijena</th>
+                <th class="col-md-2"></th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr ng-repeat="item in basket.BasketItems">
+                <td>
+                    <img class="categoryList-image" src="{{::item.Product.Image}}" alt="" />
+                </td>
+                <td>
+                    <span ng-bind="::item.Product.Title"></span>
+                </td>
+                <td class="text-right">
+                    <span ng-bind="::item.UnitPrice"></span>
+                    <span style="padding-right: 50px">kn</span>                
+                </td>
+                <td>
+                    <input type="number" class="form-control" ng-model="item.Amount" ng-change="item.onAmountChanged()" max="{{item.Product.Count}}" min="1" />
+                </td>
+                <td class="text-right">
+                    <span ng-bind="item.totalPrice()"></span>
+                    <span>kn</span>                
+                </td>
+                <td>
+                    <div class="btn-group pull-right">
+                        <button ng-click="item.removeFromBasket()" class="btn btn-sm">Ukloni</button>
+                    </div>
+                </td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <th colspan="4" class="text-right">
+                    Ukupna cijena:
+                </th>
+                <th class="text-right">
+                    <span ng-bind="basket.totalPrice()"></span>
+                </th>
+                <th>
+                    <button ng-click="basket.buyBasket()" class="btn btn-success col-md-12">Kupi</button>
+                </th>
+            </tr>
+        </tfoot>
+    </table>
 }
 @section contact {
     <div class="form-horizontal">
