--- a/UniverzalnaWebTrgovina/UWT.Web/Views/Invoice/Invoice.cshtml
+++ b/UniverzalnaWebTrgovina/UWT.Web/Views/Invoice/Invoice.cshtml
@@ -1,7 +1,165 @@
-﻿@model UWT.Web.Models.InvoiceViewModel
-
+﻿@using Microsoft.AspNet.Identity
+@using UWT.Web.Extensions
+@using UWT.Web.Models
+@model InvoiceViewModel
 @{
+    var shop = (ShopViewModel)ViewBag.Shop;
+    Layout = "~/Views/Shared/PageLayouts/" + shop.GetPageLayout().Layout;
+    var style = shop.GetPageStyle();
+}
+<style>
+    .navimage {
+        background-color: @style.NavColor;
+        background-image: url(@style.BackgroundImage.Replace("~", ""));
+        background-repeat: no-repeat;
+        background-size: cover;
+        height: 180px;
+        margin-top: -50px;
+    }
+    .footerimage {
+        background-color: @style.NavColor;
+        background-image: url(@style.FooterImage.Replace("~", ""));
+        background-repeat: no-repeat;
+        background-size: cover;
+        height: 180px;
+    }
+    .searchbar, .logo, nav {
+        background-color: @style.NavColor;
+    }
+    .categoryList-image {
+        max-height: 30px;
+        max-width: 40px;
+    }
+    .img-logo {
+        height: 100%;
+        padding: 5px;
+    }
+    .logo {
+        height: 57px;
+    }
+    body {
+        background-color: @style.BackgroundColor;
+    }
+    h2, h3, body {
+        color: @style.ForegroundColor;
+    }
+    .vertical-center {
+        position: relative;
+        transform: translateY(50%);
+    }
+    a {
+        text-decoration: none;
+    }
+    .productItem div {
+        height: 120px;
+    }
+    .sheet {
+        background-color: @style.SheetColor;
+    }
+</style>
 
+@section pageBegin {
+    <!DOCTYPE html>
+    <html ng-app="uwtApp">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>@ViewBag.Title - Univerzalna trgovina</title>
+        @Styles.Render("~/Content/css")
+        <link href="~/Content/animations.min.css" rel="stylesheet" />
+        <link href="~/Content/uwtShops.css" rel="stylesheet" />
+        <link href="~/Content/GalleryItem.css" rel="stylesheet" />
+        @Scripts.Render("~/bundles/modernizr")
+        <script src="~/Scripts/jquery-2.1.4.min.js"></script>
+        <script src="~/Scripts/angular.min.js"></script>
+        <link href="~/Content/Vitality.css" rel="stylesheet" />
+        <link href="~/Content/startbootstrap.css" rel="stylesheet" />
+    </head>
+    <body ng-controller="BasketController">
 }
 
-<h2>title</h2>
+@section navImage {
+    <div class="navimage"></div>
+}
+@section logo {
+    <a href="@Url.Action("Index", "Home", new {Model.Id})">
+        <div class="pull-left logo">
+            <img class="img-logo" src="@style.Logo.Replace("~", "")" alt="" />
+        </div>
+        <h3 class="pull-left" style="margin-left: 10px">@shop.Name</h3>
+    </a>
+    <a class="pull-right btn btn-default vertical-center" href="@Url.Action("Index", "Home", new {Id = 0})">
+        Sve trgovine
+    </a>
+}
+
+@section footer {
+    <div class="footerimage"></div>
+}
+@section basketContent {
+    <h3>Račun - @Model.DateCreated.ToLocalTime().ToString()</h3>
+    <table class="table table-responsive table-condensed" style="margin-bottom: 150px; margin-top: 50px">
+        <thead>
+            <tr>
+                <th colspan="2" class="col-md-5">Proizvod</th>
+                <th class="col-md-2 text-center">Jedinična cijena</th>
+                <th class="col-md-2">Količina (kom.)</th>
+                <th class="col-md-3 text-right">Ukupna cijena</th>
+            </tr>
+        </thead>
+        <tbody>
+        @foreach (var item in Model.Basket.BasketItems)
+        {
+            <tr>
+                <td class="col-md-1"><img class="categoryList-image" src="@item.Product.Image.Replace("~","")" alt=""/></td>
+                <td class="col-md-4">@item.Product.Title</td>
+                <td class="text-right">
+                    <span>@item.UnitPrice.ToString("#0.00")</span>
+                    <span style="padding-right: 50px">kn</span>
+                </td>
+                <td>@item.Amount</td>
+                <th class="text-right">
+                    <span>@((item.UnitPrice*item.Amount).ToString("#0.00"))</span>
+                    <span>kn</span>
+                </th>
+            </tr>
+        }
+        </tbody>
+        <tfoot>
+            <tr>
+                <th colspan="4" class="text-right">Ukupna cijena:</th>
+                <th class="text-right">
+                    <span>@Model.Basket.BasketItems.Sum(i => i.Amount * i.UnitPrice).ToString("#0.00")</span>
+                    <span>kn</span>
+                </th>
+            </tr>
+        </tfoot>
+    </table>
+}
+@section contact {
+    <div class="form-horizontal">
+        <h3>Kontakt</h3>
+        <div class="form-group">
+            <label class="col-md-4">Adresa:</label>
+            <label class="col-md-8">@shop.Address</label>
+        </div>
+        <div class="form-group">
+            <label class="col-md-4">Telefonski broj:</label>
+            <label class="col-md-8">@shop.Phone</label>
+        </div>
+        <div class="form-group">
+            <label class="col-md-4">Email:</label>
+            <label class="col-md-8">@shop.Email</label>
+        </div>
+    </div>
+}
+@section search {
+    <a href="@Url.Action("Index", "Invoice", new {shop.Id})" class="btn btn-default vertical-center col-md-12">Raniji računi</a>
+}
+@section basket {
+    <a href="@Url.Action("Index", "Home", new {shop.Id})" class="btn btn-default vertical-center col-md-12">Povratak na kupovinu</a>
+}
+@section pageEnd {
+</body>
+</html>
+}
