--- a/UniverzalnaWebTrgovina/UWT.Web/Views/Home/Shop.cshtml
+++ b/UniverzalnaWebTrgovina/UWT.Web/Views/Home/Shop.cshtml
@@ -128,7 +128,11 @@
                 </a>
                 <h3 ng-bind="product.Title"></h3>
                 <p ng-bind="product.Description"></p>
-                <p ng-bind="product.UnitPrice"></p>
+                <p>
+                    <del style="color: green" ng-bind="product.UnitPrice.toFixed(2)" ng-show="product.DiscountedPrice - product.UnitPrice < 0"></del>
+                    <span ng-bind="product.DiscountedPrice.toFixed(2)"></span>
+                    <span>kn</span>
+                </p>
                 <p>Raspoloživo: <span ng-bind="product.Count"></span></p>
                 @if (User.Identity.IsAuthenticated) {
                     <button class="btn btn-sm" ng-click="product.addToBasket()" ng-hide="product.InBasket || product.Count == 0">Dodaj u košaricu</button>
