--- a/UniverzalnaWebTrgovina/UWT.Web/Views/Invoice/Index.cshtml
+++ b/UniverzalnaWebTrgovina/UWT.Web/Views/Invoice/Index.cshtml
@@ -1,7 +1,6 @@
-﻿@using Microsoft.AspNet.Identity
-@using UWT.Web.Extensions
+﻿@using UWT.Web.Extensions
 @using UWT.Web.Models
-@model InvoiceViewModel
+@model IEnumerable<InvoiceViewModel>
 @{
     var shop = (ShopViewModel)ViewBag.Shop;
     Layout = "~/Views/Shared/PageLayouts/" + shop.GetPageLayout().Layout;
@@ -82,7 +81,7 @@
     <div class="navimage"></div>
 }
 @section logo {
-    <a href="@Url.Action("Index", "Home", new {Model.Id})">
+    <a href="@Url.Action("Index", "Home", new {shop.Id})">
         <div class="pull-left logo">
             <img class="img-logo" src="@style.Logo.Replace("~", "")" alt="" />
         </div>
@@ -97,48 +96,8 @@
     <div class="footerimage"></div>
 }
 @section basketContent {
-    <h3>Račun - @Model.DateCreated.ToLocalTime().ToString()</h3>
-    <table class="table table-responsive table-condensed" style="margin-bottom: 150px; margin-top: 50px">
-        <thead>
-            <tr>
-                <th colspan="2" class="col-md-5">Proizvod</th>
-                <th class="col-md-2 text-center">Jedinična cijena</th>
-                <th class="col-md-2">Količina (kom.)</th>
-                <th class="col-md-3 text-right">Ukupna cijena</th>
-            </tr>
-        </thead>
-        <tbody>
-        @foreach (var item in Model.Basket.BasketItems)
-        {
-            <tr>
-                <td class="col-md-1"><img class="categoryList-image" src="@item.Product.Image.Replace("~","")" alt=""/></td>
-                <td class="col-md-4">@item.Product.Title</td>
-                <td class="text-right">
-                    @if (item.UnitPrice < item.DiscountedFrom)
-                    {
-                        <del style="color: green">@item.DiscountedFrom.ToString("#0.00")</del>
-                    }
-                    <span>@item.UnitPrice.ToString("#0.00")</span>
-                    <span style="padding-right: 50px">kn</span>
-                </td>
-                <td>@item.Amount</td>
-                <th class="text-right">
-                    <span>@item.TotalPrice().ToString("#0.00")</span>
-                    <span>kn</span>
-                </th>
-            </tr>
-        }
-        </tbody>
-        <tfoot>
-            <tr>
-                <th colspan="4" class="text-right">Ukupna cijena:</th>
-                <th class="text-right">
-                    <span>@Model.Basket.BasketItems.Sum(i => i.TotalPrice()).ToString("#0.00")</span>
-                    <span>kn</span>
-                </th>
-            </tr>
-        </tfoot>
-    </table>
+    <h3>Prethodne kupovine</h3>
+    @Html.Partial("InvoiceList", Model, ViewData)
 }
 @section contact {
     <div class="form-horizontal">
@@ -156,9 +115,6 @@
             <label class="col-md-8">@shop.Email</label>
         </div>
     </div>
-}
-@section search {
-    <a href="@Url.Action("Index", "Invoice", new {shop.Id})" class="btn btn-default vertical-center col-md-12">Raniji računi</a>
 }
 @section basket {
     <a href="@Url.Action("Index", "Home", new {shop.Id})" class="btn btn-default vertical-center col-md-12">Povratak na kupovinu</a>
