--- a/UniverzalnaWebTrgovina/UWT.Web/Views/Home/Shop.cshtml
+++ b/UniverzalnaWebTrgovina/UWT.Web/Views/Home/Shop.cshtml
@@ -146,18 +146,31 @@
     }
     @section contact {
         <div class="form-horizontal">
-            <h3>Kontakt</h3>
-            <div class="form-group">
-                <label class="col-md-4">Adresa:</label>
-                <label class="col-md-8">@Model.Address</label>
+            <div class="row">
+                <div>
+                    <div class="col-md-6">
+                        <h3 style="padding-bottom:8px">Kontakt</h3>
+                    </div>
+                    <div class="col-md-6 vertical-center">
+                        <div class="pull-right">
+                            <a href="@Url.Action("Index", "Invoice", new {Model.Id})" class="btn btn-default">Pregled ranijih računa</a>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <label class="col-md-4">Telefonski broj:</label>
-                <label class="col-md-8">@Model.Phone</label>
-            </div>
-            <div class="form-group">
-                <label class="col-md-4">Email:</label>
-                <label class="col-md-8">@Model.Email</label>
+            <div class="row col-md-12">
+                <div class="form-group">
+                    <label class="col-md-4">Adresa:</label>
+                    <label class="col-md-8">@Model.Address</label>
+                </div>
+                <div class="form-group">
+                    <label class="col-md-4">Telefonski broj:</label>
+                    <label class="col-md-8">@Model.Phone</label>
+                </div>
+                <div class="form-group">
+                    <label class="col-md-4">Email:</label>
+                    <label class="col-md-8">@Model.Email</label>
+                </div>
             </div>
         </div>
     }
