--- a/UniverzalnaWebTrgovina/UWT.Web/Views/Merchant/Discounts.cshtml
+++ b/UniverzalnaWebTrgovina/UWT.Web/Views/Merchant/Discounts.cshtml
@@ -14,7 +14,7 @@
 }
 @section buttons
 {
-    <a href="@Url.Action("EditShop", "Merchant", new {Model.Id})" class="btn btn-default">Natrag</a>
+    <a href="@Url.Action("EditShop", "Merchant", new {Model.Id})" class="btn btn-default">Natrag na trgovinu</a>
     <a href="@Url.Action("Categories", "Merchant", new {shop = Model.Id})" class="btn btn-default">Kategorije proizvoda</a>
     <a href="@Url.Action("Products", "Merchant", new { shop = Model.Id })" class="btn btn-default">Proizvodi</a>
 }
