--- a/UniverzalnaWebTrgovina/UWT.Web/Views/Merchant/MyShops.cshtml
+++ b/UniverzalnaWebTrgovina/UWT.Web/Views/Merchant/MyShops.cshtml
@@ -16,18 +16,16 @@
             <th>@Html.DisplayNameFor(model => model.Phone)</th>
             <th>@Html.DisplayNameFor(model => model.Address)</th>
             <th>@Html.DisplayNameFor(model => model.DateCreated)</th>
-            <th></th>
         </tr>
     </thead>
     <tbody>
         @foreach (var item in Model) {
             <tr>
-                <td>@Html.DisplayFor(modelItem => item.Name)</td>
+                <td>@Html.ActionLink(item.Name, "EditShop", new { item.Id }, new { @class = "btn btn-default col-md-12" })</td>
                 <td>@Html.DisplayFor(modelItem => item.Email)</td>
                 <td>@Html.DisplayFor(modelItem => item.Phone)</td>
                 <td>@Html.DisplayFor(modelItem => item.Address)</td>
                 <td>@Html.DisplayFor(modelItem => item.DateCreated)</td>
-                <td>@Html.ActionLink("Uredi trgovinu", "EditShop", new { item.Id }, new { @class = "btn btn-sm btn-default pull-right" })</td>
             </tr>
         }
     </tbody>
