--- a/UniverzalnaWebTrgovina/UWT.Web/Views/Shared/_Layout.cshtml
+++ b/UniverzalnaWebTrgovina/UWT.Web/Views/Shared/_Layout.cshtml
@@ -8,8 +8,10 @@
     <link href="~/Content/animations.min.css" rel="stylesheet" />
     <link href="~/Content/uwt.css" rel="stylesheet" />
     <link href="~/Content/GalleryItem.css" rel="stylesheet" />
+    <link href="~/Content/Graph.css" rel="stylesheet" />
     @Scripts.Render("~/bundles/modernizr")
     <script src="~/Scripts/jquery-2.1.4.min.js"></script>
+    <script src="~/Scripts/flot/jquery.flot.min.js"></script>
     <script src="~/Scripts/angular.min.js"></script>
     <script src="~/Scripts/Controllers/UwtControllers.js"></script>
     @RenderSection("controllers", false)
