--- a/UniverzalnaWebTrgovina/UWT.Web/Views/Merchant/CreateProduct.cshtml
+++ b/UniverzalnaWebTrgovina/UWT.Web/Views/Merchant/CreateProduct.cshtml
@@ -14,43 +14,49 @@
     <div class="col-md-6">
         @Html.ValidationSummary("", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(m => m.Title, new { @class = "col-md-3 control-label" })
-            <div class="col-md-9">
+            @Html.LabelFor(m => m.Title, new { @class = "col-md-5 control-label" })
+            <div class="col-md-6">
                 @Html.EditorFor(m => m.Title, new { htmlAttributes = new { @class = "form-control" } })
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(m => m.Description, new { @class = "col-md-3 control-label" })
-            <div class="col-md-9">
+            @Html.LabelFor(m => m.Description, new { @class = "col-md-5 control-label" })
+            <div class="col-md-6">
                 @Html.EditorFor(m => m.Description, new { htmlAttributes = new { @class = "form-control" } })
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(m => m.Count, new {@class = "col-md-3 control-label"})
-            <div class="col-md-9">
-                @Html.EditorFor(m => m.Count, new {htmlAttributes = new {@class = "form-control"}})
+            @Html.LabelFor(m => m.Count, new {@class = "col-md-5 control-label"})
+            <div class="col-md-6">
+                <div class="input-group">
+                    @Html.EditorFor(m => m.Count, new { htmlAttributes = new { @class = "form-control text-right" } })
+                    <span class="input-group-addon">kom</span>
+                </div>
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(m => m.UnitPrice, new { @class = "col-md-3 control-label" })
-            <div class="col-md-9">
-                @Html.EditorFor(m => m.UnitPrice, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.LabelFor(m => m.UnitPrice, new { @class = "col-md-5 control-label" })
+            <div class="col-md-6">
+                <div class="input-group">
+                    @Html.EditorFor(m => m.UnitPrice, new {htmlAttributes = new {@class = "form-control text-right"}})
+                    <span class="input-group-addon">kn</span>
+                </div>
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(m => m.Tags, new { @class = "col-md-3 control-label" })
-            <div class="col-md-9">
+            @Html.LabelFor(m => m.Tags, new { @class = "col-md-5 control-label" })
+            <div class="col-md-6">
                 @Html.EditorFor(m => m.Tags, new { htmlAttributes = new { @class = "form-control" } })
             </div>
         </div>
         <div class="form-group">
-            @Html.Label("Kategorije:", new { @class = "col-md-3 control-label" })
-            <div class="col-md-9">
+            @Html.Label("Kategorije:", new { @class = "col-md-5 control-label" })
+            <div class="col-md-6">
                 <input id="categoryDisplay" name="categoryDisplay" class="form-control" value="" readonly="readonly" />
             </div>
         </div>
         <div class="form-group">
-            <div class="col-md-offset-3 col-md-9">
+            <div class="col-md-offset-5 col-md-6">
                 @Html.ListBoxFor(m => Model.Categories, (MultiSelectList)ViewBag.Categories, new { @class = "form-control" })
             </div>
         </div>
